--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/Alıştırma/CSS-my site/images/cloud.png" alt="top-cloud">
+        <img class="top-cloud" src="images/cloud.png" alt="top-cloud">
         <h1>I'm Abdullah.</h1>
         <h2 id="who-me">a programmer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud">    
