--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <div class="mid-container">
         <div class="profile">
             <img class="profile-foto" src="images/circle-cropped.png" alt="">
-            <h2>Hello</h2>
+            <h2>Merhaba</h2>
             <p>1999 ekim ayında Eskişehirde doğdum.2018 yılında Adanan menderes üniversitesini kazandım ve şuan Bilgisayar mühendisliği 3.sınıfta okuyorum.</p>
         </div>
         <hr>
         <div class="Skilss">
-            <h2 style="text-align: center;">My Skills</h2>
+            <h2 style="text-align: center;">Hobilerim</h2>
             <div class="skill-row">
             <img class="center-img" id="btc" src="https://media.giphy.com/media/niy4wlySGK94i9qS48/giphy.gif" alt="">
             <h3 class="center">Blockchain & Kriptopara</h3>
@@ -45,7 +45,7 @@
             <h2 class="center">Benimle İletişime Geç</h2>
             <h3 class="center">Sende kendi kendine öğrenmeye meraklıysan</h3>
             <p>Birbirimizden pek çok şey öğrenebiliriz.</p>
-            <a href="abdullahsezeies@gmail.com" class="BUTTON_CNJ">CONTACT ME</a>
+            <a href="abdullahsezeies@gmail.com" class="BUTTON_CNJ">MESAJ GÖNDER</a>
         </div>
 
 
