--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
             <img class="profile-foto" src="images/circle-cropped.png" alt="">
             <h2>Merhaba</h2>
-            <p>1999 ekim ayında Eskişehirde doğdum.2018 yılında Adanan menderes üniversitesini kazandım ve şuan Bilgisayar mühendisliği 3.sınıfta okuyorum.</p>
+            <p>1999 ekim ayında Eskişehirde doğdum.2018 yılında Adnan menderes üniversitesini kazandım ve şuan Bilgisayar mühendisliği 3.sınıfta okuyorum.</p>
         </div>
         <hr>
         <div class="Skilss">
